feat:这B班值不值上计算
