# routers/commentsRouter.go
@@ -106,6 +106,51 @@ func init() {
 			Filters:          nil,
 			Params:           nil})
 
+	beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"] = append(beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"],
+		beego.ControllerComments{
+			Method:           "GetAll",
+			Router:           `/`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"] = append(beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"],
+		beego.ControllerComments{
+			Method:           "GetOne",
+			Router:           `/:id`,
+			AllowHTTPMethods: []string{"get"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"] = append(beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"],
+		beego.ControllerComments{
+			Method:           "Put",
+			Router:           `/:id`,
+			AllowHTTPMethods: []string{"put"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"] = append(beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"],
+		beego.ControllerComments{
+			Method:           "Delete",
+			Router:           `/:id`,
+			AllowHTTPMethods: []string{"delete"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
+	beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"] = append(beego.GlobalControllerRouter["golang_apiv2/controllers:QualityWorkController"],
+		beego.ControllerComments{
+			Method:           "Post",
+			Router:           `/quality-work`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams:     param.Make(),
+			Filters:          nil,
+			Params:           nil})
+
 	beego.GlobalControllerRouter["golang_apiv2/controllers:UserController"] = append(beego.GlobalControllerRouter["golang_apiv2/controllers:UserController"],
 		beego.ControllerComments{
 			Method:           "Post",
